--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="has-navbar-fixed-top">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +15,7 @@
     <section id="home" class="hero is-white is-fullheight">
         <!-- Hero head: will stick at the top -->
         <div class="hero-head">
-          <nav class="navbar">
+          <nav class="navbar is-fixed-top">
             <div class="container">
               <div class="navbar-brand">
                 <a class="navbar-item logo-link">
@@ -81,7 +81,7 @@
           <div class="container">
             <div class="columns">
               <div class="column is-5 about-img has-text-centered">
-                <img src="http://www.placehold.it/450x300"/>
+                <img src="/img/side.jpg"/>
               </div>
               <div class="column is-1"></div>
               <div class="column is-5 about-text">
