--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </section>
       <div class="lithium lity-hide" id="contact-modal">
           <div class="form-a">
-              <form action="https://formspree.io/topaz.adedapo@gmail.com" method="POST">
+              <form action="https://formspree.io/topaz.adedapo@gmail.com" method="POST" netlify>
                   <div class="field">
                       <label class="label">Your Name</label>
                       <div class="control has-icons-left has-icons-right">
