Renaming Emfato Holdings to Emfato Group

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="geo.position" content="6.431272;3.457163" />
 <meta name="ICBM" content="6.431272, 3.457163" />
 
-    <title>Emfato Holdings - Empowering Farmers Together</title>
+    <title>Emfato Group - Empowering Farmers Together</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
@@ -108,7 +108,7 @@
             <div class="columns is-centered ">
               <div class="column is-8 is-narrow has-text-centered section-heading">
                   <h2 class="hero-title" data-aos="fade-up">Our Brands</h2>
-                      <p class="hero-subtitle" data-aos="fade-up">Emfato Holdings is Africa's leader in agricultural innovation, with an productive brand portfolio that includes some of the world’s leading digital agriculture brands.</p>
+                      <p class="hero-subtitle" data-aos="fade-up">Emfato Group is Africa's leader in agricultural innovation, with an productive brand portfolio that includes some of the world’s leading digital agriculture brands.</p>
               </div>
             </div>
             <div class="columns is-centered">
@@ -230,11 +230,11 @@
                     <ul>
                       <li><a href="tel:+2348093849263">+234 809 3849 263</a></li>
                       <li>|</li>
-                      <li><a href="mailto:info@emfato.africa">info@emfato.africa</a></li>
+                      <li><a href="mailto:info@emfato.africa">info@emfatogroup.com</a></li>
                     </ul>
                   </p>
                   <p data-aos="fade-up">Plot 5A, Block 114, Akiogun Street, Oniru, Lekki Phase1, Lagos, Nigeria.</p>
-                  <p class="copyright" data-aos="fade-up">&copy; 2018 Emfato Holdings. All rights Reserved.</p>
+                  <p class="copyright" data-aos="fade-up">&copy; 2018 Emfato Group. All rights Reserved.</p>
                 
             </div>
           </div>
