--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           <nav class="navbar is-fixed-top">
             <div class="container">
               <div class="navbar-brand">
-                <a class="navbar-item logo-link">
-                  <img class="logo-svg" src="/img/logo.svg" alt="Emfato Logo">
+                <a class="navbar-item logo-link" href="#">
+                  <img class="logo-svg" src="/img/emfato_logo.svg" alt="Emfato Logo">
                 </a>
                 <span class="navbar-burger burger" data-target="navbarMenuHeroA">
                   <span></span>
@@ -219,7 +219,7 @@
         <div class="container">
           <div class="columns is-centered">
             <div class="column is-6 is-narrow footer-logo has-text-centered">
-              <img src="/img/logo_white.svg" data-aos="fade-up"/>
+              <img src="/img/emfato_white_logo.svg" data-aos="fade-up"/>
             </div>
             <hr data-aos="fade-up">
             
