--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
     <title>Emfato Group - Empowering Farmers Together</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" 
+      type="image/png" 
+      href="img/favicon.png">
+      <meta name="theme-color" content="#DEF219">
     <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="fonts/stylesheet.css" />
