--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="geo.position" content="6.431272;3.457163" />
 <meta name="ICBM" content="6.431272, 3.457163" />
 
-    <title>Emfato Group - Empowering Farmers Together</title>
+    <title>Emfato - Powering collaborative food production in Africa with technology</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" 
       type="image/png" 
@@ -36,11 +36,11 @@
                   <img class="special" src="img/emfato_logo.svg"/>
                   <hr>
                     <h1 class="hero-title" data-aos="fade-up">
-                        Powering collaborative food production in Africa
+                        Powering collaborative food production in Africa with technology
                     </h1>
-                    <h2 class="hero-subtitle" data-aos="fade-up">
+                    <!-- <h2 class="hero-subtitle" data-aos="fade-up">
                         We are powering a future where rural farmers are empowered, new agriculture technologies are explored, and where everyone is a farmer.
-                    </h2>
+                    </h2> -->
                     <a href="#contact-modal" class="button is-success is-rounded is-positive button-x" data-lity><span class="icon"><i class="fas fa-envelope"></i></span> &nbsp; &nbsp;Contact us</a>
                    
                   </div>
