--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="geo.position" content="6.431272;3.457163" />
 <meta name="ICBM" content="6.431272, 3.457163" />
 
-    <title>Emfato - Powering collaborative food production in Africa with technology</title>
+    <title>Farmcrowdy Group - Powering collaborative food production in Africa with technology</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" 
       type="image/png" 
